--- a/LAB5/style.css
+++ b/LAB5/style.css
@@ -1,1 +1,11 @@
-/*write your style here*/
+table{
+    border:1px solid black;
+    background-color: gray;
+}
+th{
+    border:1px solid black;
+    background-color: red;
+}
+td{
+    border:1px solid black;
+}
